# umbra-x

./: .claude-config.yml  .gitignore  BOOTSTRAP.md  CHANGELOG.md  CLI_GUIDE.md  CLI_QUICK_REFERENCE.txt  CLI_USER_GUIDE.md  CLI_V0.2_PROGRESS.md  CODE_OF_CONDUCT.md  COMPLETE_STATUS.md  COMPLETE_TESTING_GUIDE.md  CONTRIBUTING.md  CURRENT_STATUS.md  Cargo.toml  FINAL_COMPLETION.md  FINAL_DELIVERY.md  GROUP_CHAT_REFERENCE.txt  HOW_TO_TEST.md  HOW_TO_USE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_FINAL.md  INDEX.md  PHASE_A_COMPLETE.md  PHASE_B_COMPLETE.md  PHASE_D_WEEK_10_COMPLETE.md  PROJECT_COMPLETE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_CLI.md  ROADMAP.md  ROADMAP_UPDATE_SUMMARY.txt  SECURITY.md  SPRINT_COMPLETE.md  STATUS.md  STATUS_REPORT.md  STATUS_SUMMARY.txt  SUMMARY.md  TESTING.md  (+10 more)
.claude/: orchestration.yml
.github/workflows/: ci.yml
apps/cli/: Cargo.toml
apps/cli/src/: chat.rs  main.rs  ui.rs
apps/desktop/: Cargo.toml  README.md  debug_connection.sh  deep_debug.sh  diagnose.sh  run.sh  tauri.conf.json  test.sh  test_ui.sh
apps/desktop/src/: main.rs  tests.rs
apps/desktop/ui/public/: app.js  index.html  style.css
apps/node/: Cargo.toml
apps/node/src/: main.rs
crates/umbra-crypto/: Cargo.toml
crates/umbra-crypto/src/: aead.rs  chat_crypto.rs  error.rs  handshake.rs  identity.rs  kem.rs  lib.rs  session.rs
crates/umbra-crypto/tests/: integration_test.rs
crates/umbra-identity/: Cargo.toml
crates/umbra-identity/benches/: zkproof.rs
crates/umbra-identity/src/: circuit.rs  error.rs  field_utils.rs  identity.rs  lib.rs  proof.rs  prover.rs  storage.rs
crates/umbra-mls/: Cargo.toml
crates/umbra-mls/src/: lib.rs
crates/umbra-net/: Cargo.toml
crates/umbra-net/src/: circuit.rs  cover.rs  error.rs  handshake.rs  lib.rs  message.rs  timing.rs  transport.rs
crates/umbra-net/tests/: edge_cases_test.rs  encrypted_message_test.rs  gossipsub_test.rs  handshake_integration_test.rs  integration_test.rs  swarm_test.rs
crates/umbra-sdk/: Cargo.toml
crates/umbra-sdk/src/: lib.rs
crates/umbra-vault/: Cargo.toml
crates/umbra-vault/src/: lib.rs  storage.rs
crates/umbra-wire/: Cargo.toml  build.rs
crates/umbra-wire/proto/: handshake.proto  message.proto
crates/umbra-wire/src/: convert.rs  error.rs  framing.rs  handshake.rs  lib.rs  message.rs
crates/umbra-zk/: Cargo.toml  PHASE_D_STATUS.md
crates/umbra-zk/src/: circuit.rs  credential.rs  error.rs  groth16.rs  lib.rs  merkle.rs  policy.rs  rln.rs
examples/: Cargo.toml  hello_mesh.rs  simple_chat.rs
