[workspace]
resolver = "2"
members = [
    "crates/umbra-net",
    "crates/umbra-crypto",
    "crates/umbra-mls",
    "crates/umbra-zk",
    "crates/umbra-wire",
    "crates/umbra-vault",
    "crates/umbra-sdk",
    "apps/node",
    "apps/desktop",
    "apps/cli",
    "examples",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "AGPL-3.0"
repository = "https://github.com/umbra-chat/umbra"
authors = ["UMBRA Contributors"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-util = "0.7"
futures = "0.3"

# Networking
libp2p = { version = "0.53", features = ["tokio", "tcp", "quic", "dns", "kad", "identify", "ping", "gossipsub", "noise", "yamux", "macros", "request-response"] }
quinn = "0.11"

# Crypto
ring = "0.17"
chacha20poly1305 = "0.10"
x25519-dalek = "2.0"
ed25519-dalek = "2.1"
sha2 = "0.10"
blake3 = "1.5"
zeroize = { version = "1.7", features = ["derive"] }
hpke = "0.11"

# Post-quantum
oqs = "0.9"
pqcrypto-kyber = "0.8"
pqcrypto-dilithium = "0.5"

# Serialization
prost = "0.13"
prost-types = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
bytes = "1.5"
rand = "0.8"
uuid = { version = "1.6", features = ["v4"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
