[package]
name = "examples"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
umbra-sdk = { path = "../crates/umbra-sdk" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[example]]
name = "simple_chat"
path = "simple_chat.rs"

[[example]]
name = "hello_mesh"
path = "hello_mesh.rs"
