[package]
name = "umbra-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "umbra"
path = "src/main.rs"

[dependencies]
umbra-sdk = { path = "../../crates/umbra-sdk" }
umbra-net = { path = "../../crates/umbra-net" }
umbra-crypto = { path = "../../crates/umbra-crypto" }
umbra-identity = { path = "../../crates/umbra-identity" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
libp2p = "0.53"
sha2 = "0.10"
colored = "2"
chrono = "0.4"
indicatif = "0.17"
console = "0.15"
hex = "0.4.3"
