[package]
name = "umbra-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
umbra-sdk = { path = "../../crates/umbra-sdk" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# TODO (W7-W9): Add tauri dependencies
# tauri = "2.0"
# serde = { workspace = true }
# serde_json = { workspace = true }
