[package]
name = "umbra-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
umbra-net = { path = "../../crates/umbra-net" }
libp2p = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-opener = "2.0"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
