[package]
name = "umbra-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
umbra-sdk = { path = "../../crates/umbra-sdk" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
