[package]
name = "umbra-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Classical crypto
ring = { workspace = true }
chacha20poly1305 = { workspace = true }
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
hpke = { workspace = true }

# Post-quantum (pure Rust - no OpenSSL needed!)
pqcrypto-kyber = { workspace = true }
pqcrypto-dilithium = { workspace = true }
pqcrypto-traits = "0.3"

# Utils
zeroize = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
libp2p = { workspace = true }
serde = { workspace = true }
bincode = "1.3"

# Note: PQ crypto is now always enabled (Option C: Always-On Hybrid)
# Removed feature gates for simplicity while maintaining full quantum resistance

[dev-dependencies]
hex = "0.4"
