[package]
name = "umbra-net"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# Note: PQ features removed - crypto is always-on hybrid (Option C)

[dependencies]
# Networking
libp2p = { workspace = true }
libp2p-swarm = "0.44"
libp2p-swarm-derive = "0.34"
quinn = { workspace = true }

# Async
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }

# Utils
bytes = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
prost = { workspace = true }

# Internal
umbra-wire = { path = "../umbra-wire" }
umbra-crypto = { path = "../umbra-crypto" }
umbra-identity = { path = "../umbra-identity" }
ed25519-dalek = { workspace = true }
hex = "0.4"

[dev-dependencies]
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
