[package]
name = "umbra-sdk"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
authors.workspace = true

[dependencies]
umbra-net = { path = "../umbra-net" }
umbra-crypto = { path = "../umbra-crypto" }
umbra-mls = { path = "../umbra-mls" }
umbra-zk = { path = "../umbra-zk" }
umbra-vault = { path = "../umbra-vault" }
umbra-wire = { path = "../umbra-wire" }

tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
libp2p = { workspace = true }
