[package]
name = "umbra-wire"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }

[build-dependencies]
prost-build = "0.13"
