[package]
name = "umbra-wire"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
umbra-crypto = { path = "../umbra-crypto" }
ed25519-dalek = { workspace = true }
libp2p = { workspace = true }

[build-dependencies]
prost-build = "0.13"
